# libcontentaction

./: .gitignore  Makefile.am  TODO  action-desktop.txt  autogen.sh  common.pri  configure.ac  contentaction-0.1-uninstalled.pc.in  contentaction-0.1.pc.in  contentaction-dui-0.1-uninstalled.pc.in  contentaction-dui-0.1.pc.in  libcontentaction.pro  ltmain-asneeded.patch
am/: covoptioncheck.am
customer-tests/: runTests.sh  test_actions.py
data/: Makefile.am  contentaction-rfs.sh  contentaction.conf  core.actions  core.xml  data.pro  defaults.list  gen-regexps  highlight1.xml  highlight1.xml.in  hl-examples.xml  mimeapps.list  regextest.py  regextest2.py  tempgalleryif.desktop  tempmusicsuiteif.desktop  tempvideosuiteif.desktop  tracker1.xml
debian/: .gitignore  api  changelog  conffiles  control  copyright  libcontentaction-data.install  libcontentaction-dev.install  libcontentaction-doc.install  libcontentaction-dui-dev.install  libcontentaction-dui0.install  libcontentaction-tests.aegis  libcontentaction-tests.install  libcontentaction0.aegis  libcontentaction0.install  rules
declarative/: declarative.pro  declarativecontentaction.cpp  declarativecontentaction.h  plugin.cpp  plugin.h  plugins.qmltypes
doc/: Makefile.am  doxy.cfg
rpm/: libcontentaction-qt5.spec  libcontentaction-qt5.yaml  libcontentaction.changes  libcontentaction.rpmlintrc  libcontentaction.spec  libcontentaction.yaml
src/: .gitignore  Exports  Exports.dui  Makefile.am  config.cpp  contentaction-0.1.pc.in  contentaction-dui.h  contentaction.cpp  contentaction.h  contentaction5.pc.in  contentaction_internal.h  contentinfo.cpp  contentinfo.h  dbus.cpp  doc.h  dui-highlight.cpp  exec.cpp  fsodbus.cpp  gconf.cpp  highlight.cpp  highlighter.cpp  internal.h  lca-tool.cpp  locales.cpp  mime.cpp  service.cpp  service.h  src.pro  tracker.cpp
t/: .gitignore  Makefile.am  cltool.py  data.image  data.web  env.h.in  env.py.in  env.sh.in  gallery.py  hl1.cpp  hldemo.cpp  hlinput.txt  l10ntest.cpp  launchme.desktop  lca-cita-test  linktest.cpp  sandbox.sh  service.map  servicelistener.cpp  servicelistenerdummy.h  servicemapper.py  stop-sandbox.sh  test-action.cpp  test-actions.sh  test-classes.sh  test-classesof.cpp  test-defaults.py  test-desktop-launching.py  test-findhighlights.cpp  test-fixed-params.py  test-highlight.sh  test-info.cpp  test-invalid-defaults.py  test-invoking.py  test-l10n.sh  test-mimedefaults.cpp  test-mimes.py  test-mimetypes.sh  test-regexps.py  test-schemes.sh  (+7 more)
t/applications/: Makefile.am  addcontact.desktop  browser.desktop  caller.desktop  cattofile.desktop  complexmusic.desktop  contacthandler.desktop  defaults.list  emailer.desktop  fixedparams.desktop  galleryserviceinterface.desktop  gallerywithfilename.desktop  mimeinfo.cache  nothing.desktop  other.desktop  ovi-music.desktop  plainimageviewer.desktop  regexpmatcher.desktop  show.desktop  special-browser.desktop  trackerimageviewer.desktop  uberdui.desktop  uberexec.desktop  ubermeego.desktop  ubermimeopen.desktop  upload.desktop
t/test-l10n-data/: Makefile.am  test-l10n-actions.xml  test_en_US.ts  test_fi.ts  test_fi_FI.ts  test_hu.ts  test_hu_HU.ts
t/test-l10n-data/applications/: mimeinfo.cache  other.desktop  show.desktop  upload.desktop
tests/: cltool.py  env.py.in  gallery.py  hldemo.cpp  launchme.desktop  lca-cita-test  lca-cita-test.in  linktest.cpp  plaintext  sandbox.sh  servicelistener.cpp  servicemapper.py  servicetest.pro  start-sandbox.sh  test-action.cpp  test-actions.sh  test-defaults.py  test-desktop-launching.py  test-findhighlights.cpp  test-fixed-params.py  test-highlight.sh  test-info.cpp  test-invalid-defaults.py  test-invoking.py  test-l10n.sh  test-mimedefaults.cpp  test-mimes.py  test-regexps.py  test-servicefw-signals.py  test-special-chars.py  test_action.pro  test_findhighlights.pro  test_info.pro  test_mimedefaults.pro  testcase.pri  testdata.pro  testdata.ttl  testlib.sh  tests.pro  tests.xml  (+2 more)
tests/applications/: applications.pro  browser.desktop  defaults.list  emailer.desktop  fixedparams.desktop  gallerywithfilename.desktop  mimeinfo.cache  other.desktop  other.desktop.in  ovoda.desktop  plainmusicplayer.desktop  show.desktop  show.desktop.in  uberexec.desktop  ubermeego.desktop  ubermeego.desktop.in  ubermimeopen.desktop  unterexec.desktop  upload.desktop  upload.desktop.in  uriprinter.desktop
tests/test-l10n-data/: test-en.ts  test-fi.ts  test-hu.ts  test-l10n-data.pro  test_en.ts  test_eng_en.ts
tools/: lca-tool.cpp  tools.pro
