actionsdir = $(datadir)/contentaction
dist_actions_DATA = \
	tracker1.xml \
	highlight1.xml

testdatadir = $(datadir)/libcontentaction-tests/data
dist_testdata_DATA = \
	tracker1.xml \
	highlight1.xml \
	hl-examples.xml

applicationsdir = $(datadir)/applications
dist_applications_DATA = \
	defaults.list
