citestappdir = $(datarootdir)/libcontentaction-tests/applications
dist_citestapp_DATA = \
	mimeinfo.cache \
	defaults.list \
	uberexec.desktop \
	ubermeego.desktop \
	ubermimeopen.desktop \
	caller.desktop \
	addcontact.desktop \
	contacthandler.desktop \
	emailer.desktop \
	galleryserviceinterface.desktop \
	other.desktop \
	show.desktop \
	upload.desktop \
	fixedparams.desktop
